Deploy enhancement: Runs from sted.jar directly.